added ENV var and templates

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@
 
 # App settings (development specific)
 appsettings.Development.json
+
+# Environment variables script (contains secrets)
+set-env.sh
